# trt-samples-for-hackathon-cn

./: .gitattributes  .gitignore  CLAUDE.md  README.md
cookbook/: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile.inc  README-Chinese.md  README.md  README.outline.txt  build-Copyright-and-README.py  build-Copyright.py  build-README.py  clean.sh  clear.sh  cloc.txt  copyright.py  pyproject.toml  requirement-dev.txt  requirements-dev.txt  requirements.txt  setup.py  start-BIGBLACK.sh  start.sh  temp.py  tensorrt-cookbook.Dockerfile  test.py  testAll.sh  testAll[TODO].sh  unit_test.sh
cookbook/00-Data/: .gitignore  README.md  extract-data-gz.py  extract-data-hf.py  extract-data-kg.py  extract_MNIST.py  extract_mnist.py  get-data.py  get-model-part1.py  get-model-part2.py  get_model.py  get_model_part1.py  get_model_part2.py  unit_test.sh  unit_test.yaml
cookbook/00-MNISTData/: README.md  extractMnistData.py  getOnnxModel.py  loadMnistData.py  requirements.txt
cookbook/01-SimpleDemo/: README.md  README.outline.txt  build-README.py  unit_test.sh
cookbook/02-API/: README.md  README.outline.txt  build-README.py  unit_test.sh
cookbook/03-APIModel/: README.md
cookbook/03-Workflow/: README.md  README.outline.txt  build-README.py
cookbook/04-Feature/: README.md  README.outline.txt  build-README.py  unit_test.sh
cookbook/04-Parser/: README.md
cookbook/05-Plugin/: README.md  README.outline.txt  build-README.py  unit_test.sh
cookbook/06-DLFrameworkTRT/: README.md  README.outline.txt  build-README.py  unit_test.sh
cookbook/06-PluginAndParser/: README.md
cookbook/07-FrameworkTRT/: README.md
cookbook/07-Tool/: README.md  README.outline.txt  build-README.py
cookbook/08-Advance/: README.md  README.outline.txt  build-README.py
cookbook/08-Tool/: README.md
cookbook/09-Advance/: README.md
cookbook/09-BestPractice/: README.md
cookbook/09-TRTLLM/: README.md  build-README.py
cookbook/09-TensorRT-LLM/: README.md
cookbook/10-BestPractice/: README.md
cookbook/10-ProblemSolving/: README.md  unit_test.sh
cookbook/10-TensorRT-RTX/: README.md  compare.py  main.py  requirements.txt  unit_test.yaml
cookbook/11-TensorRT-LLM/: README.md
cookbook/11-Uncategorized/: README.md  getTensorRTVersion.sh  浮点数.md
cookbook/12-Deprecated/: README.md  TRT7-MultiContext.py
cookbook/50-Resource/: Hackathon2022-初赛总结-Wenet优化-V1.1.pptx  README.md  TensorRT教程-TRT8.2.3-V1.1.pptx
cookbook/51-Uncategorized/: Number.md  OnnxOperator.ods  TensorFormat.md  getTensorRTVersion.sh  getVersion.py  number.md  tf2-usageOfCheckpoint.py
cookbook/52-Deprecated/: README.md
cookbook/90-Misc/: README.md  README.outline.txt  ResizeLayer-Mathemtica.nb
cookbook/91-OldStuff/: README.md
cookbook/98-Uncategorized/: README.md  TensorFormat.md  build-README.py  build_data_type_md.py  build_number_md.py  build_number_picture.py  get_device_info.py  get_library_info.py  unit_test.sh
cookbook/99-NotFinish/: FillLayer.py  RangeNode.py  SliceNode.py  TRT8.4的namedDimensions检查.txt  TensorRTLean-TensorRTDispatch.txt  TopKLayer.py  pytorchToTensorRT.py  suggestion.txt  tf2-usageOfCheckpoint.py
cookbook/99-Todo/: API_DIFF_TRT_vs_TRT_RTX.md  README.md  coverage-gap-priority-10.16.2.5.md  enum-missing-10.16.2.5.txt  enum-readme-only-10.16.2.5.txt  missing-api-items-10.16.2.5-relaxed.txt  missing-api-items-10.16.2.5.txt  trex-process.md  trex.md  uncovered-top-features-10.16.2.5.txt
cookbook/include/: Makefile.inc  __init__.py  calibrator.cpp  calibrator.h  cnpy.cpp  cnpy.h  cnpy.md  cookbookHelper.cu  cookbookHelper.cuh  cookbookHelper.hpp  example_network.py  utils.py  utils_class.py  utils_function.py  utils_network.py  utils_onnx.py
cookbook/tensorrt_cookbook/: __init__.py  utils.py  utils_class-old.py  utils_class.py  utils_cookbook.py  utils_engine_explorer.py  utils_function.py  utils_gc.py  utils_mpi.py  utils_onnx.py  (+4 more)
(+3682 files in other folders)
