[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensorrt-cookbook"
description = "TensorRT-Cookbook: TensorRT-related learning and reference materials, as well as code examples."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.7, <4"
license = { text = "Apache License 2.0" }
authors = [
  { name = "NVIDIA Corporation" }
]
keywords = ["nvidia", "tensorrt", "deeplearning", "inference"]
dynamic = ["version", "dependencies"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/NVIDIA/trt-samples-for-hackathon-cn"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
where = ["."]
include = ["tensorrt_cookbook*"]

[tool.setuptools.dynamic]
version = { attr = "tensorrt_cookbook.version.__version__" }
dependencies = { file = ["requirements.txt"] }
